fix bug datalist on firefox and icons problem

--- a/docdoku-server/docdoku-server-web/yo/app/less/common/part_modal.less
+++ b/docdoku-server/docdoku-server-web/yo/app/less/common/part_modal.less
@@ -115,6 +115,7 @@
         margin-left: 10px;
         opacity: 0.4;
         &:hover {
+          cursor: pointer;
           opacity: 1;
         }
       }
@@ -241,7 +242,7 @@
 
   .subParts-CADInstance, .data-sub-part {
     display: none;
-    cursor: not-allowed;
+
   }
 
 
